# me

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Shuttle.toml  doppler.yaml  fly.toml  foober.md  json2toml.sh  justfile
.github/workflows/: build-binary.yml
.shuttle/: config.toml
backend/: Cargo.toml  askama.toml
backend/src/: main.rs  models.rs  router.rs  routes.rs  templates.rs
backend/src/router/: journal.rs  mod.rs
cli/: Cargo.toml
cli/src/: main.rs
database/: Cargo.toml
database/journal/: clap-cli-tool.md
database/journal/aws/: micro_container_service.json
database/journal/networking/: https_nginx_certbot.md
database/src/: main.rs
frontend/: tailwind.config.js
frontend/assets/journal/: algo-trading-bot.md  alpaca-rust-sdk.md  aws-cli-auth.md  aws-elastic-container-service.md  claude-prompting-guide.md  daily-linear-classifier.md  docker-vite.md  https-nginx-certbot.md  language-classifier.md  raspberry-pi-dns.md  sqlx-for-sqlite.md  titanic-binary-classification.md
frontend/assets/journal/aws/: aws-cli-auth.md
frontend/styles/: input.css  journal_entries.css  output.css
frontend/templates/: index.html  journal_entries.html
journal/aws/: aws-certificate-manager.md  aws-elastic-container-registry.md
journal/css/: css-svgs-basics.md
journal/docker/: docker-basics.md  docker-vite.md
journal/machine-learning/: digit-classifier.md  image-classifier.md  language-classifier.md
journal/rust/: shuttle-portfolio.md
src/: main.rs
src/router/: journal.rs
