[package]
name = "me"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.4"
libsql = {workspace = true} 
pulldown-cmark = "0.12.0"
serde = { workspace = true }
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
tokio = {workspace = true} 
tower-livereload = "0.9.3"
walkdir = {workspace = true}
